--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
 		"node": ">=18.19.0 <19"
 	},
 	"dependencies": {
+		"@google/generative-ai": "^0.21.0",
 		"axios": "^1.7.2",
 		"bcryptjs": "^2.4.3",
 		"body-parser": "^1.20.2",
