Add maxDuration configuration for serverless functions in Vercel settings

--- a/vercel.json
+++ b/vercel.json
@@ -12,6 +12,11 @@
       "destination": "/src/index.js"
     }
   ],
+  "functions": {
+    "src/*.js": {
+      "maxDuration": 25
+    }
+  },
   "headers": [
     {
       "source": "/(.*)",
