Refactor Vercel configuration to separate function settings and update routing syntax

--- a/vercel.json
+++ b/vercel.json
@@ -1,18 +1,20 @@
 {
   "version": 2,
+  "functions": {
+    "src/index.js": {
+      "maxDuration": 25
+    }
+  },
   "builds": [
     {
-      "src": "/src/index.js",
-      "use": "@vercel/node",
-      "config": {
-        "maxDuration": 25
-      }
+      "src": "src/index.js",
+      "use": "@vercel/node"
     }
   ],
-  "rewrites": [
+  "routes": [
     {
-      "source": "/(.*)",
-      "destination": "/src/index.js"
+      "src": "/(.*)",
+      "dest": "src/index.js"
     }
   ],
   "headers": [
