Update Vercel configuration to use wildcard for function paths and adjust routing syntax

--- a/vercel.json
+++ b/vercel.json
@@ -1,20 +1,14 @@
 {
   "version": 2,
   "functions": {
-    "src/index.js": {
+    "src/*.js": {
       "maxDuration": 25
     }
   },
-  "builds": [
+  "rewrites": [
     {
-      "src": "src/index.js",
-      "use": "@vercel/node"
-    }
-  ],
-  "routes": [
-    {
-      "src": "/(.*)",
-      "dest": "src/index.js"
+      "source": "/(.*)",
+      "destination": "/src/index.js"
     }
   ],
   "headers": [
