Update Vercel configuration to change main entry point and adjust function paths

--- a/vercel.json
+++ b/vercel.json
@@ -1,14 +1,14 @@
 {
   "version": 2,
   "functions": {
-    "src/index.js": {
+    "api/*.js": {
       "maxDuration": 25
     }
   },
   "rewrites": [
     {
       "source": "/(.*)",
-      "destination": "/src/index.js"
+      "destination": "/api/index.js"
     }
   ],
   "headers": [
