--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
 	"name": "community-app-backend",
 	"version": "1.0.1",
 	"description": "",
-	"main": "src/index.js",
+	"main": "api/index.js",
 	"scripts": {
 		"test": "echo \"Error: no test specified\" && exit 1",
 		"dev": "nodemon src/index.js",
