--- a/package.json
+++ b/package.json
@@ -5,11 +5,11 @@
 	"main": "api/index.js",
 	"scripts": {
 		"test": "echo \"Error: no test specified\" && exit 1",
-		"dev": "nodemon src/index.js",
-		"start": "node src/index.js",
+		"dev": "nodemon api/index.js",
+		"start": "node api/index.js",
 		"build": "npx tsc",
-		"migrate": "node src/migrate.js migrate",
-		"rollback": "node src/migrate.js rollback",
+		"migrate": "node api/migrate.js migrate",
+		"rollback": "node api/migrate.js rollback",
 		"format:check": "prettier --check .",
 		"format:write": "prettier --write .",
 		"lint:check": "eslint .",
