--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
 		"test": "echo \"Error: no test specified\" && exit 1",
 		"dev": "nodemon api/index.js",
 		"start": "node api/index.js",
-		"build": "node api/index.js",
+		"vercel-build": "echo 'Build step is not required'",
 		"migrate": "node api/migrate.js migrate",
 		"rollback": "node api/migrate.js rollback",
 		"format:check": "prettier --check .",
