Add main server file and update package.json for correct entry points

--- a/package.json
+++ b/package.json
@@ -2,14 +2,14 @@
 	"name": "community-app-backend",
 	"version": "1.0.1",
 	"description": "",
-	"main": "api/index.js",
+	"main": "index.js",
 	"scripts": {
 		"test": "echo \"Error: no test specified\" && exit 1",
-		"dev": "nodemon api/index.js",
-		"start": "node api/index.js",
+		"dev": "nodemon index.js",
+		"start": "node index.js",
 		"vercel-build": "echo 'Build step is not required'",
-		"migrate": "node api/migrate.js migrate",
-		"rollback": "node api/migrate.js rollback",
+		"migrate": "node migrate.js migrate",
+		"rollback": "node migrate.js rollback",
 		"format:check": "prettier --check .",
 		"format:write": "prettier --write .",
 		"lint:check": "eslint .",
